# django-ninja-test

./: .gitignore  Makefile  README.md  locustfile.py  manage.py  pyproject.toml
async_test/: admin.py  apps.py  models.py  router.py  schema.py
async_test/migrations/: 0001_initial.py  0002_remove_mymodel_url.py
ninja_test/: api.py  asgi.py  settings.py  urls.py  wsgi.py
sync_test/: apps.py  router.py
